Fixed z-index on headlinks.

--- a/styles/main.css
+++ b/styles/main.css
@@ -179,6 +179,7 @@ html, body {
     display:inline-block;
     text-align:center;
     width:100%;
+    z-index:5;
 }
 
 
